# galaxy_analyzer

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirement.txt  requirements.txt
docs/: conf.py  galactic_plotter.rst  galaxy_analyzer.rst  get_vRadial.rst  index.rst  intersection_analyzer.rst  plot_utilities.rst
galactic-plotter/: galactic_plotter.py  get_vRadial.py  synthetic_plotter.py
galaxy_analyzer/: galaxy_analyzer.py  intersection_analyzer.py  plot_utilities.py
